Changing the logo and favicon and removing the old ones

--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.svg" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Movies is your trusted source for discovering movies, TV shows, and celebrity content. Find ratings, reviews, and detailed descriptions for the latest releases. Get personalized recommendations, add titles to your watchlist, and easily track where to stream your favorite content."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/movie-logo-01.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>
       Movies: Ratings, Reviews, and Where to Watch the Best Movies & TV Shows
